--- a/home.html
+++ b/home.html
@@ -27,13 +27,13 @@
 
 // Your web app's Firebase configuration
 const firebaseConfig = {
-  apiKey: "AIzaSycLzXACadfMdGR-vN7FvfgLTTaGMvNxNA",
-  authDomain: "dfgdfgfhg.firebaseapp.com",
-  databaseURL: "https://dfgdfg-default-rtdb.firebaseio.com",
-  projectId: "xcvxcvdfdf",
-  storageBucket: "cxcvx.appspot.com",
-  messagingSenderId: "1075896640223",
-  appId: "1:1075854d453:web:0b45faee550rg31d2b93bf6a"
+  apiKey: "AIzaSyD-3Ih5Oq9bwJ3NDbZcSD4DO8VzNvFTFPY",
+  authDomain: "web-based-gui.firebaseapp.com",
+  databaseURL: "https://web-based-gui-default-rtdb.firebaseio.com/",
+  projectId: "web-based-gui",
+  storageBucket: "web-based-gui.appspot.com",
+  messagingSenderId: "547370351848",
+  appId: "1:547370351848:android:212b3f2fec2e49fec29d5d"
 };
 
 //DON'T EDIT BELOW THIS
